--- a/src/assets/scss/core/variables/_colors.scss
+++ b/src/assets/scss/core/variables/_colors.scss
@@ -320,3 +320,7 @@ $gray-dark:              lighten($gray-base, 20%) !default;   // #333
 $gray:                   lighten($gray-base, 33.5%) !default; // #555
 $gray-light:             #999999 !default; // #999999
 $gray-lighter:           lighten($gray-base, 93.5%) !default; // #eee
+
+//Atomizer Colors
+$atom-black: #282828;
+$atom-black-lighter: lighten($atom-black, 20%) !default; // #eee;
