--- a/src/assets/scss/core/variables/_brand.scss
+++ b/src/assets/scss/core/variables/_brand.scss
@@ -3,10 +3,10 @@
 
 /*     brand Colors              */
 
-$brand-primary:              $purple-500 !default;
+$brand-primary:              $atom-blue !default;
 //$brand-info:                 $cyan-500 !default;
 //info modified to atomizer blue
-$brand-info:                 #0691CB !default;
+$brand-info:                 $atom-blue !default;
 $brand-success:              $green-500 !default;
 $brand-warning:              $orange-500 !default;
 $brand-danger:               $red-500 !default;
