--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -5,7 +5,7 @@
             <!-- RabbitMQ Status -->
             <div class="col-md-4">
                 <div class="card card-stats">
-                    <div class="card-header card-header-light-blue card-header-icon">
+                    <div class="card-header card-header-atom-black card-header-icon">
                         <div class="card-icon">
                             <img src="../../assets/img/Rabbitmq_32.png" alt="RabbitMQ Logo">
                         </div>
@@ -29,7 +29,7 @@
             <!-- Docker Status -->
             <div class="col-md-4">
                 <div class="card card-stats">
-                    <div class="card-header card-header-light-blue card-header-icon">
+                    <div class="card-header card-header-atom-black card-header-icon">
                         <div class="card-icon">
                             <img src="../../assets/img/Docker_32.png" alt="Docker Logo">
                         </div>
@@ -53,7 +53,7 @@
             <!-- Atomizer Status -->
             <div class="col-md-4">
                 <div class="card card-stats">
-                    <div class="card-header card-header-light-blue card-header-icon">
+                    <div class="card-header card-header-atom-black card-header-icon">
                         <div class="card-icon">
                             <img src="../../assets/img/Atomizer_32.png" alt="Atomizer Logo">
                         </div>
