--- a/src/assets/scss/core/_cards.scss
+++ b/src/assets/scss/core/_cards.scss
@@ -218,6 +218,12 @@
       background: linear-gradient(60deg, $light-blue-100, $light-blue-300);
     }
 
+    .card-header-atom-black .card-icon,
+    .card-header-atom-black .card-text,
+    .card-header-atom-black:not(.card-header-icon):not(.card-header-text){
+      background: $atom-black-lighter !important;
+    }
+
     .card-header-primary .card-icon,
     .card-header-primary:not(.card-header-icon):not(.card-header-text),
     .card-header-primary .card-text{
