GH-11 modified rabbit host to pull from docker ENV variable

--- a/src/app/atoms/atoms.component.html
+++ b/src/app/atoms/atoms.component.html
@@ -10,7 +10,7 @@
                     <div class="card-body">
 
                         <div class="row">
-                            <div class="col-sm-4">
+                            <div class="col-12">
                                 <input type="text" value="" placeholder="Number of Tosses" [formControl]="numTosses" />
                                 <button class="btn btn-info" (click)="atomizeMonte(numTosses.value)">Atomize</button>
                             </div>
