--- a/src/app/atoms/atoms.component.html
+++ b/src/app/atoms/atoms.component.html
@@ -18,8 +18,7 @@
                                     (click)="atomizeMonte(numTosses.value)">Atomize</button>
 
                                 <div *ngIf="numTosses.invalid && numTosses.dirty">
-                                    <p class="text-danger">Tosses must be numeric and between 1 and 2000 (There is a
-                                        know bug over 2000 tosses)</p>
+                                    <p class="text-danger">Tosses must be numeric and greater than 1</p>
                                 </div>
 
 
